# nanopore

./: .gitignore  README.md  basecalling.py  copy-to-server.py  cut_release.sh  experiments.py  fast5_archives.py  main.py  mapping.py  prepare_fast5_release.py  prepare_loose_shared.sh  pyproject.toml  qc.ipynb  qc.py  quick_qc.py  run_qc_notebook.sh  slurm.py
utils/: extract_fast5_metadata.ipynb  get_38_stats.sh  get_flowcell_info.py  get_release_qc_stats.sh  getmd5s.sh  nano_shared_UB_fast5_meta.ipynb  phase_ont_bam.sh  prepare_GM24385_Prom_Notts.ipynb  prepare_Notts_GM24385.ipynb  prepare_ashley_prom.ipynb  prepare_fast5_release.ipynb  prepare_loose_shared.sh  prepare_loose_shared_nott.sh  qc-fastq-dup-check.ipynb  run_guppy.sh  setup_loman.sh  submit_cut_release.sh  submit_mapping_ashley.sh  submit_nano_main.sh  submit_prepare_fast5_release.sh  submit_prepare_shared.sh  submit_prepare_shared_array.sh  submit_qc_notebook.sh  submit_release_reheader.sh  submit_test_nano_main.sh  tar_multiseq_fast5.sh  ultra-long-ont-upload.sh
