[tool.poetry]
name = "nanopore-qc"
description = ""
version = "0.1.0"
authors = [ "Noah Spies <nspies@stanford.edu>" ]

[tool.poetry.dependencies]
python = "^3.6"
admiral = "^0.2.0"
attrs = "^18.1"
click = "^6.7"
pandas = "^0.23.0"
ont_fast5_api = "^0.4.1"
biorpy = {git = "https://github.com/nspies/biorpy"}
pysam = "^0.14.1"
tqdm = "^4.23"
notebook = "^5.5"

[tool.poetry.dev-dependencies]
